--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_world">New Graffiti</string>
     <string name="action_settings">Settings</string>
 
-    <string name="button_camera">Camera</string>
+    <string name="button_camera">Camera!!!!</string>
     <string name="image_cd_camera">Content Description Camera</string>
 
 
