--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -14,7 +14,16 @@
     <string name="send">Send</string>
     <string name="new_frame">New Frame</string>
 
+    <string name="start_new">New</string>
+    <string name="brush">Brush</string>
+    <string name="erase">Erase</string>
+    <string name="save">Save</string>
+    <string name="paint">Paint</string>
+
+
+
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_test">TestActivity</string>
+    <string name="title_activity_drawing_class">DrawingClass</string>
 </resources>
