--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_drawing_class">DrawingClass</string>
+    <string name="photo_view">PhotoView</string>
 </resources>
