Enormous commit. Includes large refactoring of code across all modules to get system process timing better. Working implementation of swipe-view. All of flickr upload/download works, and modules auto-update themselves to grab new photos and data.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="cancel">Cancel</string>
     <string name="send">Send</string>
     <string name="new_frame">New Frame</string>
+    <string name="MAP">Map</string>
 
     <string name="start_new">New</string>
     <string name="brush">Brush</string>
