--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="login_label">Log in</string>
 
-    <string name="button_camera">New Graffiti</string>
+    <string name="button_camera">New</string>
     <string name="image_cd_camera">Content Description Camera</string>
 
     <string name="white">White</string>
