Added rest of the drawingView functionality

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="save">Save</string>
     <string name="paint">Paint</string>
 
+    <string name="sml">Small</string>
+    <string name="med">Medium</string>
+    <string name="lrg">Large</string>
 
 
 <!-- TODO: Remove or change this placeholder text -->
